[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Main/PanelStylebox.tres" type="StyleBox" id=1]
[ext_resource path="res://Scenes/Main/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Main/BackgroundStylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/MainMenu/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GameUI/GameUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameUI" parent="." instance=ExtResource( 5 )]
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 4 )]
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
visible = false
margin_left = 32.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 1248.0
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )

[connection signal="credits_pressed" from="MainMenu" to="." method="_on_MainMenu_credits_pressed"]
[connection signal="start_game_pressed" from="MainMenu" to="." method="_on_MainMenu_start_game_pressed"]
